# slashbooks

./: .gitignore  .gitleaks.toml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  TRADEMARKS.md  pyproject.toml
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json  plugin.json
.codex-plugin/: plugin.json
.github/workflows/: secret-scan.yml
docs/: banksync.md  connectors.md  doing-your-books.md  for-accountants.md  imports.md  philosophy.md
docs/plans/: 2026-06-22-001-refactor-scalable-ledger-store-plan.md
examples/: README.md
examples/connectors/: custom_connector_template.py
scripts/: refresh-codex-local-plugin
skills/books/: SKILL.md
skills/books-ask/: SKILL.md
skills/books-backtest/: SKILL.md
skills/books-checkup/: SKILL.md
skills/books-close/: SKILL.md
skills/books-dashboard/: SKILL.md
skills/books-export/: SKILL.md
skills/books-onboard/: SKILL.md
skills/books-review/: SKILL.md
src/bookkeeping/: __init__.py  cli.py  compare.py  demo.py  entity.py  ingest.py  queue.py  quickbooks.py  reconcile.py
tests/: test_auditlog.py  test_banksync.py  test_cache.py  test_compare.py  test_csvsource.py  test_demo.py  test_entity.py  test_importer.py  test_ingest.py  test_ledger_migrate.py  test_ledger_model.py  test_ledger_store.py  test_ledger_validator.py  test_ledger_writer.py  test_normalize.py  test_payroll.py  test_plugin.py  test_provider_api.py  test_queue.py  test_quickbooks.py  test_reconcile.py  test_scalability.py  test_staging.py  test_statements.py  test_workbook.py
(+53 files in other folders)
